页面： 增加结账后关闭父页面，并刷新跳转过来的页面 修改子项结账打印 修改订单页面BUG 修改客账页面BUG
优化客账页面
优化退房页面

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -140,7 +140,7 @@
                     title: '编辑',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_admin.html?s=1',
+                    content: 'iframe_admin.html?s=1&date=' + Date.now(),
                     end: function (index, layero) {
                         sessionStorage.removeItem('roleItem');
                         tab.reload();//刷新表格
@@ -158,7 +158,7 @@
                 title: '新增',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_admin.html',
+                content: 'iframe_admin.html&date=' + Date.now(),
                 end: function (index, layero) {
                     tab.reload();//刷新表格
                 }
