--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -156,6 +156,9 @@
             }
         });
         $(function () {
+            //判断用户是否激活当前页面
+            visibilityChange();
+
             setInterval(function () {
                 getReport($)
             }, 60000)
