--- a/src/main/webapp/iframe_member_debitCard.html
+++ b/src/main/webapp/iframe_member_debitCard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>会员储值</title>
+    <title>储值调整</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
     <style>
         .layui-text em, .layui-word-aux {
@@ -56,10 +56,10 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">支付方式</label>
                 <div class="layui-input-block">
-                    <input type="radio" name="type" value="1" title="现金" checked>
-                    <input type="radio" name="type" value="2" title="刷卡">
-                    <input type="radio" name="type" value="3" title="微信">
-                    <input type="radio" name="type" value="4" title="支付宝">
+                    <input type="radio" name="type" value="现金" title="现金" checked>
+                    <input type="radio" name="type" value="刷卡" title="刷卡">
+                    <input type="radio" name="type" value="微信" title="微信">
+                    <input type="radio" name="type" value="支付宝" title="支付宝">
                 </div>
             </div>
             <div class="layui-form-item" style="text-align: right">
