--- a/src/main/webapp/iframe_member_integral.html
+++ b/src/main/webapp/iframe_member_integral.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>积分调整</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
     <style>
         .layui-text em, .layui-word-aux {
