--- a/src/main/webapp/iframe_orderDeposit.html
+++ b/src/main/webapp/iframe_orderDeposit.html
@@ -36,7 +36,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">会员详情</label>
             <div class="layui-input-block" style="line-height: 38px">
-                拥有积分：<span class="integral" style="color:#ff0000;"></span>，储值卡余额：<span class="prepaidCard"
+                拥有积分：<span class="integral" style="color:#ff0000;"></span>元，储值卡余额：<span class="prepaidCard"
                                                                                        style="color:#ff0000;"></span>元
             </div>
         </div>
