--- a/src/main/webapp/role.html
+++ b/src/main/webapp/role.html
@@ -165,7 +165,7 @@
                     title: '编辑',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_roleInfo.html?s=1',
+                    content: 'iframe_roleInfo.html?s=1&date=' + Date.now(),
                     end: function (index, layero) {
                         sessionStorage.removeItem('roleItem');
                         tab.reload();//刷新表格
@@ -183,7 +183,7 @@
                 title: '新增',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_roleInfo.html',
+                content: 'iframe_roleInfo.html?date=' + Date.now(),
                 end: function (index, layero) {
                     tab.reload();//刷新表格
                 }
