--- a/src/main/webapp/member_info.html
+++ b/src/main/webapp/member_info.html
@@ -95,8 +95,8 @@
                                     return data.createTime != null ? DateToLStr(new Date(data.createTime.time)) : '空'
                                 }
                             },
-                            {field: 'remark', title: '备注', minWidth: 80, align: 'center'},
-                            {field: 'name', title: '收银员', minWidth: 80, align: 'center'}
+                            {field: 'name', title: '收银员', minWidth: 80, align: 'center'},
+                            {field: 'remark', title: '备注', minWidth: 80, align: 'center'}
                         ]]
                     });
                     break;
@@ -129,13 +129,13 @@
                             };
                         }
                         , cols: [[
-                            {field: 'type', title: '类型', align: 'center'},
-                            {
-                                field: 'oddNumbers', title: '单号', align: 'center',
+                            {field: 'id', hide: true, title: '编号', align: 'center'},
+                            {field: 'type', title: '类型', align: 'center',
                                 templet: function (data) {
-                                    return data.oddNumbers
+                                    return data.type
                                 }
                             },
+                            {field: 'oddNumbers', title: '单号', align: 'center'},
                             {field: 'presenterMoney', title: '赠送积分', align: 'center'},
                             {field: 'integralChange', title: '积分变动', align: 'center'},
                             {field: 'currentBalance', title: '剩余积分', align: 'center'},
@@ -144,8 +144,8 @@
                                     return data.createTime != null ? DateToLStr(new Date(data.createTime.time)) : '空'
                                 }
                             },
-                            {field: 'remark', title: '备注', align: 'center'},
-                            {field: 'name', title: '收银员', align: 'center'}
+                            {field: 'name', title: '收银员', align: 'center'},
+                            {field: 'remark', title: '备注', align: 'center'}
                         ]]
                     });
                     break;
@@ -178,13 +178,13 @@
                             };
                         }
                         , cols: [[
-                            {field: 'type', title: '类型', align: 'center'},
-                            {
-                                field: 'oddNumbers', title: '单号', align: 'center',
+                            {field: 'id', hide: true, title: '编号', align: 'center'},
+                            {field: 'type', title: '类型', align: 'center',
                                 templet: function (data) {
-                                    return data.oddNumbers
+                                    return data.type
                                 }
                             },
+                            {field: 'oddNumbers', title: '单号', align: 'center'},
                             {field: 'storedValueMoney', title: '储值金额', align: 'center'},
                             {field: 'presenterMoney', title: '赠送金额', align: 'center'},
                             {field: 'currentBalance', title: '当前余额', align: 'center'},
@@ -196,8 +196,8 @@
                                     return data.createTime != null ? DateToLStr(new Date(data.createTime.time)) : '空'
                                 }
                             },
-                            {field: 'remark', title: '备注', align: 'center'},
-                            {field: 'name', title: '收银员', align: 'center'}
+                            {field: 'name', title: '收银员', align: 'center'},
+                            {field: 'remark', title: '备注', align: 'center'}
                         ]]
                     });
                     break;
@@ -264,7 +264,7 @@
             parent.layer.open({
                 type: 2,
                 title: "编辑",
-                content: './iframe_member_add.html?id=' + id,
+                content: './iframe_member_add.html?id=' + id+ '&date=' + Date.now(),
                 area: ['820px', '520px']
             });
         });
