--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -136,7 +136,7 @@
                 <div class="layui-input-inline">
                     <input type="text" name="roomName" placeholder="请输入房号" autocomplete="off" class="layui-input">
                 </div>
-                <label class="layui-form-label">机构</label>
+                <label class="layui-form-label">客源</label>
                 <div class="layui-input-inline">
                     <select id="channel" name="channel" lay-search>
                         <option value=""></option>
@@ -183,6 +183,9 @@
 
 
         $(function () {
+            //判断用户是否激活当前页面
+            visibilityChange();
+
             //获取查询的订单状态   如何订单状态为null 则这设置订单状态为预约订单
             orderState = sessionStorage.getItem('orderState');
             if (orderState === null) {
@@ -204,6 +207,8 @@
                 getReport($);
             }, 60000)
         });
+
+
 
         form.on('radio(orderState)', function (data) {
             //每次选中单选按钮的时候  更新查询的订单状态
@@ -291,7 +296,7 @@
                         return queryOrderState(data.orderState);
                     }
                 }
-                , {fixed: 'right', title: '操作', width: 200, align: 'center', toolbar: '#barDemo'}
+                , {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo'}
             ]]
         });
         //监听提交
@@ -323,11 +328,11 @@
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
             var tr = obj.tr; //获得当前行 tr 的DOM对象
             if (layEvent === 'edit') {//编辑
-                location.href = 'schedule_change.html?id=' + data.orderId + "&idNum=" + data.certificateNumber;
+                location.href = 'schedule_change.html?id=' + data.orderId+ '&date=' + Date.now() + "&idNum=" + data.certificateNumber;
             } else if (layEvent === 'queryManage') {//查看详情
-                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode) + '&state=1', '_blank')
+                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode)+ '&date=' + Date.now() + '&state=1', '_blank')
             } else if (layEvent === 'accountManage') { //客账管理
-                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode) + '&back=0&state=0', '_blank')
+                window.open('orderInfo.html?id=' + encodeURI(data.alRoomCode)+ '&date=' + Date.now() + '&back=0&state=0', '_blank')
             } else if (layEvent === 'center') { //入住
                 location.href = 'appoint.html?phone=' + data.phone + "&idNum=" + data.certificateNumber + "&random=" + Date.now();
             } else if (layEvent === 'cancel') {//取消订单
@@ -338,7 +343,7 @@
                     title: '取消订单',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_orderCancel.html?id=' + data.orderId,
+                    content: 'iframe_orderCancel.html?id=' + data.orderId+ '&date=' + Date.now(),
                     end: function (index, layero) {
                         tab.reload();
                     }
@@ -373,7 +378,7 @@
 
             } else if (layEvent === 'queryPrice') {//打印
                 sessionStorage.setItem('oIds', data.id);
-                window.open('queryPrice.html?state=2', "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=no, copyhistory=yes, width=600, height=600");
+                window.open('queryPrice.html?state=2&date=' + Date.now(), "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=no, copyhistory=yes, width=600, height=600");
             } else if (layEvent === 'querySubPrice') {//在住打印
                 $.ajax({
                     url: api.stamOrder,
@@ -384,7 +389,7 @@
                         if (rs.success) {
                             rs.data.remark = data.remark;
                             sessionStorage.setItem('QSD', JSON.stringify(rs.data));
-                            window.open('querySubPrice.html?s=1', "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=yes, copyhistory=yes, width=600, height=600");
+                            window.open('querySubPrice.html?childId=1&date=' + Date.now(), "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=yes, copyhistory=yes, width=600, height=600");
                         } else {
                             showMsg(rs.errMsg, 2, false);
                         }
