--- a/src/main/webapp/membershipCard.html
+++ b/src/main/webapp/membershipCard.html
@@ -77,7 +77,8 @@
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     {{# if(d.state != "no" && d.state != "use") { }}
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-    {{# } else if(d.state != "freeze" && d.state != "use") { }}
+    {{# } }}
+    {{# if(d.state != "freeze" && d.state != "use") { }}
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="freeze">冻结</a>
     {{# } }}
 </script>
